# FrameworkBenchmarks

frameworks/Haskell/snap/: setup.sh  source_code
frameworks/Haskell/snap/bench/: snap-bench.cabal
frameworks/Haskell/wai/: setup.sh  source_code
frameworks/Haskell/wai/bench/: wai-bench.cabal
frameworks/Haskell/yesod/: setup.sh  source_code
frameworks/Haskell/yesod/bench/: yesod-bench.cabal
frameworks/Haskell/yesod/bench/src/: yesod.hs
toolset/setup/linux/languages/: haskell.sh
