Name:                snap-bench
Version:             0.1
Synopsis:            Snap test for benchmark tests
Description:         Simple web services to benchmark the Snap web server
License:             BSD3
Author:              Steve Smith
Maintainer:          guntir@teamclerks.net
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snap-bench
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: aeson          >=0.9.0.1 && <0.10
    , base                      >=4.8.1.0 && <5
    , bytestring                >=0.10.6.0 && <0.11
    , exceptions                >=0.8.0.2 && <0.9
    , mtl                       >=2.2.1 && <2.3
    , snap-core                 >=0.9.8.0 && <0.10
    , snap-server               >=0.9.5.1 && <0.10
    , configurator              >=0.3.0.0 && <0.4
    , resource-pool             >=0.2.3.2 && <0.3
    , mysql-simple              >=0.2.2.5 && <0.3
    , text                      >=1.2.1.3 && <1.3
    , transformers              >=0.4.2.0 && <0.5
    , random                    >=1.1 && <2
    , unordered-containers      >=0.2.5.1 && <0.3

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind -rtsopts
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
