name:              wai-bench
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         bench
    main-is:           wai.hs
    hs-source-dirs:    .

    ghc-options:       -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                       -fno-warn-unused-do-bind -rtsopts

    extensions: OverloadedStrings

    build-depends: base                          >= 4.8.1.0        && < 5
                 , aeson                         >= 0.9.0.1 && <0.10
                 , http-types                    >= 0.8.6 && <0.9
                 , network                       >= 2.6.2.1 && <3
                 , text                          >= 1.2.1.3 && <1.3
                 , wai                           >= 3.0.3.0 && <3.1
                 , warp                          >= 3.1.3 && <3.2
                 , blaze-builder                 >= 0.4.0.1 && <0.5
                 , bytestring                    >= 0.10.6.0 && <0.11
