name:              yesod-bench
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         bench
    main-is:           yesod.hs
    hs-source-dirs:    src

    ghc-options:       -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                       -fno-warn-unused-do-bind -rtsopts

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                EmptyDataDecls
                CPP

    build-depends: base                          >= 4.8.1.0    && < 5
                 , yesod-core                    >= 1.4.15     && < 1.5
                 , text                          >= 1.2.1.3    && < 1.3
                 , persistent                    >= 2.2        && < 2.3
                 , persistent-mysql              >= 2.3        && < 2.4
                 , persistent-template           >= 2.1.3.4    && < 2.2
                 , warp                          >= 3.1.3      && < 3.2
                 , auto-update                   >= 0.1.2.2    && < 0.2
                 , primitive                     >= 0.6
                 , mwc-random                    >= 0.12
                 , resource-pool                 >= 0.2.3.2
                 , network                       
                 , mongoDB
                 , monad-logger
                 , mtl
                 , wai
                 , http-types
                 , aeson
                 , blaze-builder
                 , blaze-html
                 , bytestring                    >= 0.10
                 , resource-pool
                 , resourcet
                 , shakespeare
